--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "lodash": "^4.17.10",
+    "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "path": "^0.12.7",
     "sequelize": "^4.37.7"
